--- a/test/index.html
+++ b/test/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="mocha"></div>
-    <script data-main="js/runner.js" src="js/require.js"></script>
+    <script data-main="runner.js" src="require.js"></script>
   </body>
 </html>
