Fix in-browser tests.

--- a/test/standalone.html
+++ b/test/standalone.html
@@ -19,7 +19,7 @@
           el.innerHTML = "<pre>" + data + "</pre>";
         }
         var opts = {
-          url: 'http://xdomain.socialal.ly/echo',
+          url: 'http://127.0.0.1/echo',
           method: 'post',
           headers: {
             'content-type': 'application/json'
