--- a/test/index.html
+++ b/test/index.html
@@ -1,12 +1,30 @@
 <!doctype html>
 <html>
   <head>
-    <meta charset="utf-8"/>
-    <title>Ajax Tests</title>
-    <link rel="stylesheet" href="css/mocha.css"/>
+    <title>Cookie: Test Specifications</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../node_modules/mocha/mocha.css" />
   </head>
   <body>
     <div id="mocha"></div>
-    <script data-main="runner.js" src="require.js"></script>
+    <script src="../node_modules/mocha/mocha.js"></script>
+    <script>
+      mocha.setup({
+        ui: 'bdd',
+        globals: ['___browserSync___*', 'io*'],
+        asyncOnly: true
+      });
+    </script>
+    <script src="spec.js"></script>
+    <script>
+
+      if(window.mochaPhantomJS) {
+        mochaPhantomJS.run();
+      }else{
+        mocha.checkLeaks();
+        mocha.run();
+      }
+    </script>
   </body>
 </html>
